--- a/SmsAlarm.ioc
+++ b/SmsAlarm.ioc
@@ -37,26 +37,27 @@ Mcu.Pin3=PE5
 Mcu.Pin30=PA10
 Mcu.Pin31=PA11
 Mcu.Pin32=PA12
-Mcu.Pin33=PD6
-Mcu.Pin34=PD7
-Mcu.Pin35=PB3
-Mcu.Pin36=PB4
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PB8
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PD6
+Mcu.Pin36=PD7
+Mcu.Pin37=PB3
+Mcu.Pin38=PB4
+Mcu.Pin39=PB6
 Mcu.Pin4=OSC_IN
-Mcu.Pin40=PB9
-Mcu.Pin41=PE0
-Mcu.Pin42=PE1
-Mcu.Pin43=VP_SYS_VS_ND
-Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PB7
+Mcu.Pin41=PB8
+Mcu.Pin42=PB9
+Mcu.Pin43=PE0
+Mcu.Pin44=PE1
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=OSC_OUT
 Mcu.Pin6=PE7
 Mcu.Pin7=PE8
 Mcu.Pin8=PE9
 Mcu.Pin9=PE10
-Mcu.PinsNb=46
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103VCTx
@@ -90,6 +91,10 @@ PA12.GPIO_Label=mute_bt
 PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
 PA12.Signal=GPIO_Input
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA8.GPIOParameters=PinState,GPIO_Label
 PA8.GPIO_Label=ctrl485
 PA8.Locked=true
@@ -323,8 +328,6 @@ TIM3.Prescaler=7100
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_ND.Mode=No_Debug
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
