--- a/SmsAlarm.ioc
+++ b/SmsAlarm.ioc
@@ -1,14 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
+FREERTOS.FootprintOK=true
+FREERTOS.HEAP_NUMBER=1
+FREERTOS.IPParameters=Tasks01,HEAP_NUMBER,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,0,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM3
-Mcu.IP4=TIM4
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103V(C-D-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -51,33 +56,37 @@ Mcu.Pin41=PB8
 Mcu.Pin42=PB9
 Mcu.Pin43=PE0
 Mcu.Pin44=PE1
-Mcu.Pin45=VP_SYS_VS_Systick
-Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin46=VP_SYS_VS_tim5
+Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin5=OSC_OUT
 Mcu.Pin6=PE7
 Mcu.Pin7=PE8
 Mcu.Pin8=PE9
 Mcu.Pin9=PE10
-Mcu.PinsNb=48
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103VCTx
-MxCube.Version=4.25.0
-MxDb.Version=DB.4.0.250
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+MxCube.Version=5.2.0
+MxDb.Version=DB.5.0.20
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM5_IRQn
+NVIC.TimeBaseIP=TIM5
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
@@ -278,11 +287,11 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=C\:/Users/K/STM32Cube/Repository/STM32Cube_FW_F1_V1.6.1
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103VCTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.7.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -290,6 +299,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=SmsAlarm.ioc
@@ -334,8 +344,10 @@ TIM4.Prescaler=7100
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_SYS_VS_tim5.Mode=TIM5
+VP_SYS_VS_tim5.Signal=SYS_VS_tim5
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
